Uploading image changes and case study

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               </nav>
               <section class="hero">
                   <div id="container">
-                      <h1>hi, i’m Gulbahar Okuyan-Waugh, a freelance ux designer</h1>
-                      <p class="text">You can call me "G" for short and "Rose" for a translation.
-                      <br>Living in Milan, Made in NY.</p>
-                        <div class="buttons">
+                      <h1>Hi, I’m Gulbahar,</h1>
+                      <h1>freelancing ux designer in Milan;</h1>
+                      <h1>made in NYC.</h1>
+                      <div class="buttons">
                             <a data scroll href="#projects"><button>view select projects</button></a>
-                            <a href="about.html"><button>about me</button></a>
-                        </div>
+                            <a href="about.html"><button>how to pronounce my name</button></a>
+                      </div>
                   </div>
               </section>
       </header>
@@ -58,11 +58,10 @@
                   <div class="first">
                       <div class="content">
                         <a href="rfs.html" class="rfs-image">
-                              <img src="images/home-rfs.png">
+                              <img src="images/rfs-etsy.png">
                         </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <p></p>
                                 <h3>refated Shoes</h3>
                                 <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
                                   help taking his company to the next level.</p>
@@ -74,11 +73,10 @@
                   <div class="second">
                       <div class="content">
                           <a href="coop.html" class="coop-image">
-                                <img src="images/home-coop.png">
+                                <img src="images/coop-home.png">
                           </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <p></p>
                                 <h3>COOP</h3>
                                 <p>A platform that makes it easy to share, store, and collaborate
                                    needed help rebranding for a new audience.</p>
@@ -94,10 +92,9 @@
           <section id="contact">
               <div id="container">
                   <div class="contact-text">
-                      <h2>If you’d like to get in touch to work or just chat about
-                        all things design & milan</h2>
-                        <p></p>
-                      <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                      <h2>let's chat &darr;</h2>
+                      <p></p>
+                      <div class="clearfix"></div>
                   </div>
               </div>
           </section>
