Working on case study

--- a/rfs.html
+++ b/rfs.html
@@ -250,7 +250,7 @@
           </section>
           <section class="users">
               <div id="container">
-                  <h2>who are they?</h2>
+                  <h2>personas - who is the target audience?</h2>
                   <p>
                   <h3>target customers</h3>
                   <p>We had an idea of who the RFS target market is, but were able
@@ -277,9 +277,11 @@
                   <div class="clearfix"></div>
               </div>
           </section>
-          <section class="info-arch">
+          <section id="design-org">
               <div id="container">
                   <div class="mapping">
+                      <h1>design organization</h1>
+                      <p>
                       <h2>information architecture</h2>
                       <p></p>
                       <h3>Mapping</h3>
@@ -304,48 +306,28 @@
               <div class="clearfix"></div>
             </div>
           </section>
-          <section class="sketch">
+          <section id="sketching">
               <div id="container">
                   <h2>sketching</h2>
                   <p>
-                    <!--<div class="user-test">
-                            <div class="clearfix"></div>
-                            <h3>user testing: lo-fi prototype</h3>
-                            <div class="first">
-                                <h4>Positives</h4>
-                                <ul class="survey">
-                                    <li><p>Seemed easy to click through. One person had trouble viewing her cart after she added an item.</p></li>
-                                    <li><p>Clean setup</p></li>
-                                </ul>
-                            </div>
-                            <div class="second">
-                                <h4>Suggestions</h4>
-                                    <ul class="survey">
-                                        <li><p>Include questions in the FAQ rather than just answers</p></li>
-                                        <li><p>Add the shoe size to product detail</p></li>
-                                        <li><p>Add more to the about section</p></li>
-                                        <li><p>Consider a before/after photo of shoes</p></li>
-                                    </ul>
-                            </div>
-                            <div class="clearfix"></div>
-                    </div>-->
                   <h3>iterations</h3>
                   <p>I conducted multiple rounds of testing, remote and over Skype. Below, are
                     some comments and iterations. Other notable mentions include being asked to
                     include questions in the FAQ page rather than just the answers.</p>
                   <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88"><button>lo-fi prototype</button></a>
+                  <p>
                   <div class="sketch-img">
                       <div class="page">
                             <h3>homepage</h3>
                             <p>I had two main versions of the homepage, and ultimately decided on
                               the second version. Here are the iterations:</p>
                             <div class="first" id="version">
-                                <h4 style="text-align: center;">version 1</h4>
+                                <h4 style="text-align: center; margin: 0;">version 1</h4>
                                 <img src="images/rfs-home1.png" class="first">
                                 <img src="images/rfs-lofi-HPv1.png" class="second">
                             </div>
                             <div class="second" id="version">
-                                <h4 style="text-align: center;">version 2</h4>
+                                <h4 style="text-align: center; margin:0;">version 2</h4>
                                 <img src="images/rfs-home2.png" class="first">
                                 <img src="images/rfs-lofi-HPv2.png" class="second">
                             </div>
@@ -353,7 +335,7 @@
                       </div>
                       <div class="page">
                             <h3>frequently asked questions</h3>
-                            <p>The FAQ page went through two different iterations: </p>
+                            <p>The FAQ page went through two different iterations from sketching to lo-fi: </p>
                             <img src="images/rfs-sketch-faq.jpg" class="third">
                             <img src="images/rfs-lofi-faq.png" class="third">
                             <img src="images/rfs-faq.png" class="third">
@@ -376,7 +358,7 @@
 
               </div>
           </section>
-          <section class="branding">
+          <section id="branding">
               <div id="container">
                   <div class="branding-section">
                       <h2>branding</h2>
@@ -426,7 +408,7 @@
                   </div>
               </div>
           </section>
-          <section class="prototype">
+          <section id="prototype">
               <div id="container">
                   <h2>prototype</h2>
                   <p>First, I'd like to share the final prototype. Then, I'll show you
