updated about page to reduce images

--- a/about.html
+++ b/about.html
@@ -21,12 +21,10 @@
         </script>
     </head>
 
-  <body class="about-me">
+    <body class="about-me">
       <header class="about-me">
           <nav>
-              <!--<a href="index.html" class="logo">
-                  <img src="images/spring.png" alt="gulbahar okuyan logo">
-              </a>-->
+              <button style="margin-left: 1rem;">go waugh</button>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
@@ -37,57 +35,85 @@
                   </a>
               </ul>
           </nav>
-      </header>
-      <main>
           <section class="intro">
+              <div id="container">
                   <h1>/gyl.bɑ.hɑɾ/</h1>
                   <p>
                   <h1>or you can call me G for short; Rose for translation</h1>
-                  <p>
-
+              </div>
           </section>
-          <section class="about">
-                <div id="container">
-                    <div class="one-third" id="images">
-                        <img src="images/me.png" class="first">
-                        <img src="images/belle.png" class="second">
-                        <img src="images/babies.png" class="first">
-                        <img src="images/mommy.png" class="second">
-                        <img src="images/zebras.png" class="first">
-                        <img src="images/keynote.png" class="second">
-                        <img src="images/groupphoto.png" class="first">
-                        <img src="images/kosovo2.png" class="second">
-                        <img src="images/agguate.png" class="first">
-                        <img src="images/bangladesh.png" class="second">
-                        <img src="images/married.png" class="first">
-                        <img src="images/mada.png" class="second">
-                        <img src="images/sara3.png" class="first">
-                        <img src="images/cat.png" class="second">
-                        <img src="images/aydinstory.png" class="first">
-                        <img src="images/wahoo.png" class="second">
-                    </div>
-                    <div class="two-thirds">
-                        <h3>who am i?</h3>
-                        <p>I am a consummate daydreamer, lover of hyperbole, and story-teller.
-                        <p>As a kid, I loved telling stories. The ability to make someone laugh or
-                          even cry over a story you just told was addictive. My parents saw a future
-                          politician. I wasn’t sure what I saw, I just loved sharing stories - mine,
-                          Amber Brown’s, Aesop’s, and everyone else’s.
-                        <p>I also loved figuring things out. Whether it’s people or computers. As an
-                          elementary and middle school-aged kid, I used to spend hours taking apart my
-                          computer and then putting it back together.  Unfortunately, I never saw computer
-                          science as something I would do. That’s what the smart, quieter people were doing.
-                          I was a bit obnoxious defending classmates from teachers - I looked more like a lawyer.
-                        <p>However, my absolute favorite thing to do is make things pretty. I would redecorate
-                          my bedroom every two years and never had a cubicle or office that wasn’t decorated. As
-                          the daughter of a trained architect (later becoming an entrepreneur who owns custom framing
-                          shops in NY) and a FIT graduate (currently the best public school bus driver), I was destined
-                          to pay attention to the detail and appreciate beauty and quality.
-                    </div>
+      </header>
+      <main>
 
-                    <div class="two-thirds">
+          <section class="about">
+              <!--div class="one-third" id="images">
+                  <img src="images/me.png" class="first">
+                  <img src="images/belle.png" class="second">
+                  <img src="images/babies.png" class="first">
+                  <img src="images/mommy.png" class="second">
+                  <img src="images/zebras.png" class="first">
+                  <img src="images/keynote.png" class="second">
+                  <img src="images/groupphoto.png" class="first">
+                  <img src="images/kosovo2.png" class="second">
+                  <img src="images/agguate.png" class="first">
+                  <img src="images/bangladesh.png" class="second">
+                  <img src="images/married.png" class="first">
+                  <img src="images/mada.png" class="second">
+                  <img src="images/sara3.png" class="first">
+                  <img src="images/cat.png" class="second">
+                  <img src="images/aydinstory.png" class="first">
+                  <img src="images/wahoo.png" class="second">
+              </div-->
+                <div class="intro-me">
+                    <div id="only-width">
+                        <img src="images/me.png">
+                        <h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.
+                        <p>I love being challenged and working on puzzles.</h2>
+                        <p>
+                        <h4>summary</h4>
+                        <p>I'm a UX designer with expertise in business development and strategy.
+                          Sector-agnostic, my main role is to help manage and guide you to reach
+                          your goal, whether it's a website, a project, or a product. I've worked in
+                          financial services, agriculture, entrepreneurship, and art.
+                          <div class="caps">
+                              <div class="first">
+                                  <h4>Skills</h4>
+                                  <p>UX design, UI design, branding & identity, information architecture,
+                                    wireframing, user research/testing, marketing & communications, strategy,
+                                    business development</p>
+                              </div>
+                              <div class="second">
+                                  <h4>Software</h4>
+                                  <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
+                                    Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
+                              </div>
+                              <div class="clearfix"> </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="magic">
+                    <div id="only-width">
+                      <h3>my design origin story</h3>
+                      <h2 style="padding-top:2rem;">“OW!”</h2>
+                      <p>It happened, again. My husband just walked his toe <i class="fas fa-shoe-prints" style="color: #87EED5;"></i> right into the bookshelf. Clumsiness aside,
+                        we all should be able to freely walk our living rooms, regardless of size, sans fear of pain.
+                      <p>Determined to find a solution, while he was at work the next day, with a Hulk-like strength<img src="images/icons/icons8-hulk.png" style="height: 25px;">that only appears during interior decorating-spurts,
+                        I rearranged our furniture. Then I waited and observed. He would run into something else <i class="fas fa-couch"></i>. So I’d rearrange again,
+                        then observe again.
+                      <p>After a few attempts, we finally had a solution - we cut off <i class="fas fa-hand-scissors"></i> his toe. Kidding! We found a layout that worked best
+                        for both of us and that looked as nice as possible without replacing or removing our furniture.
+                      <p>That end-solution created a level of elation that single-handedly winning a $7 million program to create an affordable
+                        housing market in Haiti could not. I wanted to do more than just win a proposal. I wanted to create and work through
+                        something until it worked, while also addressing my love of making things pretty.
+                      <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby + skills. I immediately
+                        researched programs to learn how to utilize my expertise and learn design tools and chose Bloc’s Designer Track. Thanks
+                        to them, I now can claim all of the following skills:
+                    </div>
+                </div>
+                <div class="background">
+                    <div id="only-width">
                         <h3>what have i been up to?</h3>
-                        <p>My journey to now: a freelance UX designer living in Milan, includes more than 8 years
+                        <p>My journey to becoming a freelance UX designer living in Milan, includes more than 8 years
                           working in international development, where according to Malcolm Gladwell, I became an
                           expert in development finance and agriculture, and got paid to travel to Myanmar, Kosovo,
                           Haiti, Bangladesh, Guatemala, Kenya, and most recently the Philippines. It also includes
@@ -112,53 +138,16 @@
                           beneficial side-effects like increased savings.
                         <p>Now, I’m an MBA student at SDA Bocconi, specializing in product development, marketing, and innovation.
                           I’ll be getting the management background and understanding I’m confident I’ll need in the future.
-                        <h3>the revolutionary moment</h3>
-                        <p>“OW!”
-                        <p>It happened, again. My husband just walked his toe right into the bookshelf. Even if it was his clumsiness,
-                          he shouldn’t have to be careful while walking around in his living room - even if it was tiny. There had to
-                          be a better way.
-                        <p>While he was at work the next day, with a Hulk-like strength that only appears during interior decorating-spurts,
-                          I rearranged our furniture. Then I waited and observed. He would run into something else. So I’d rearrange again,
-                          then observe again.
-                        <p>After a few attempts, we finally had a solution - we cut off his toe. Kidding! We found a layout that worked best
-                          for both of us and that looked as nice as possible without replacing or removing our furniture.
-                        <p>That end-solution created a level of elation that single-handedly winning a $7 million program to create an affordable
-                          housing market in Haiti could not. I wanted to do more than just win a proposal. I wanted to create and work through
-                          something until it worked, while also addressing my love of making things pretty.
-                        <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby + skills. I immediately
-                          researched programs to learn how to utilize my expertise and learn design tools and chose Bloc’s Designer Track. Thanks
-                          to them, I now can claim all of the following skills:
+                          <div class="buttons">
+                                <a href="#"><button>download resume</button></a>
+                          </div>
                     </div>
-                    <div class="clearfix"></div>
                 </div>
-          </section>
-          <section class="capabilities">
-              <div id="container">
-                  <div class="caps">
-                  <div class="clearfix"> </div>
-                  <div class="first">
-                      <h4>Skills</h4>
-                      <p>UX design, UI design, branding & identity, information architecture,
-                        wireframing, user research/testing, marketing & communications, strategy,
-                        business development</p>
-                  </div>
-                  <div class="second">
-                      <h4>Software</h4>
-                      <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
-                        Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
-                  </div>
-                  <div class="clearfix"> </div>
-              </div>
-              </div>
+                    <div class="clearfix"></div>
           </section>
           <section id="contact">
-              <div id="container">
-                  <h4>what else?</h4>
-                  <p>If you'd like to talk about my work, learn more, or just chat,
-                  send me a note through one of the links below.</p>
-                  <div class="buttons">
-                        <a href="#"><button>download resume</button></a>
-                  </div>
+              <div class="contact-text">
+                  <h2>let's chat &darr;</h2>
               </div>
           </section>
     <!--
@@ -190,5 +179,4 @@
           </div>
       </footer>
   </body>
-
 </html>
