--- a/images.html
+++ b/images.html
@@ -14,6 +14,25 @@
             <img src="images/background-photo.png">
 
           </section>
+          <section class="about">
+            <img src="images/icons/puzzle.png">
+            <img src="images/me.png">
+            <img src="images/belle.png">
+            <img src="images/babies.png">
+            <img src="images/mommy.png">
+            <img src="images/zebras.png">
+            <img src="images/keynote.png">
+            <img src="images/groupphoto.png">
+            <img src="images/kosovo2.png">
+            <img src="images/agguate.png">
+            <img src="images/bangladesh.png">
+            <img src="images/married.png">
+            <img src="images/mada.png">
+            <img src="images/sara3.png">
+            <img src="images/cat.png">
+            <img src="images/aydinstory.png">
+            <img src="images/wahoo.png">
+          </section>
           <section class="rfs">
             <img src="images/rfs-shoe-bg.png">
             <img src="images/rfs-laptop.png">
