--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </section>
 
           <section id="contact">
-              <div id="container">
+              <div class="contact">
                   <div class="contact-text">
                       <h2>let's chat &darr;</h2>
                       <p></p>
