updating case study

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <body class="about-me">
       <header class="about-me">
           <nav>
-              <button style="margin-left: 1rem;">go waugh</button>
+              <a href="index.html"><button style="margin-left: 1rem;">go waugh</button></a>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
@@ -123,13 +123,16 @@
                           marketing strategies to raise company visibility. My experience was mainly with small companies - with
                           a maximum of 40 people and a 5-person business development team. I wore a lot of hats and got a lot of
                           opportunities:
-                        <ul>
-                            <li>Won millions of dollars for programs in resource-poor areas</li>
-                            <li>Designed information architecture and design of SharePoint sites for two companies and managed
+                        <ul class="examples">
+                            <li class="first" id="one">Acquired more than $80 million for programs in resource-poor areas:
+                              affordable housing in Haiti and a fintech study in the Philippines</li>
+                            <li class="second" id="two">Designed information architecture and design of SharePoint sites for two companies and managed
                               the company transition</li>
-                            <li>Was a keynote speaker for NATCCO - a national credit union association in the Philippines,
-                              discussing the importance of technology in financial inclusion</li>
-                            <li>Designed and wrote content for websites</li>
+                            <div class="clearfix"></div>
+                            <li class="first" id="three">Keynote speaker for a Filipino national credit union association's annual conference,
+                              to discuss the importance of technology</li>
+                            <li class="second" id="four">Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
+                            <div class="clearfix"></div>
                         </ul>
                         <p>However, most rewarding and interesting, has been the user research during program design. I firmly
                           believed and was often shown that solutions lie within the communities that were facing the challenges.
