--- a/images.html
+++ b/images.html
@@ -37,7 +37,8 @@
             <img src="images/rfs-shoe-bg.png">
             <img src="images/rfs-laptop.png">
             <img src="images/rfs-green-mezlan.png">
-
+            <img src="images/rfs-site-map.png">
+            <img src="images/rfs-user-flows.png">
 
           </section>
       </main>
