updating case study

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                       <h1>made in NYC.</h1>
                       <div class="buttons">
                             <a data scroll href="#projects"><button>view select projects</button></a>
-                            <a href="about.html"><button>how to pronounce my name</button></a>
+                            <a href="about.html"><button style="margin-top:.5rem;">how to pronounce my name</button></a>
                       </div>
                   </div>
               </section>
