--- a/rfs.html
+++ b/rfs.html
@@ -80,15 +80,15 @@
                             of website design and development, I was to help him create
                             a brand identity and website.</p>
                       </div>
-                      <div class="part">
+                      <div class="part" style="padding-bottom: 0;">
                           <h2>the process</h2>
                           <div class="transformation">
                               <div class="first">
-                                  <h4>starting from here</h4>
+                                  <h4>starting from here...</h4>
                                   <img src="images/etsy.png" id="shadow">
                               </div>
                               <div class="second">
-                                  <h4>and getting to here</h4>
+                                  <h4>...and getting to here</h4>
                                   <img src="images/rfs-etsy.png" class="second" id="shadow">
                               </div>
                               <div class="clearfix"></div>
