updating case studies

--- a/rfs.html
+++ b/rfs.html
@@ -76,8 +76,7 @@
                         It was currently on Etsy.</p>
                       <div class="part">
                           <h2>my role</h2>
-                          <p>That’s where I came in. Freshly learning about the ways
-                            of website design and development, I was to help him create
+                          <p>That’s where I came in. I was to help him create
                             a brand identity and website.</p>
                       </div>
                       <div class="part" style="padding-bottom: 0;">
