changed layout of case study - work in progress

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <body class="about-me">
       <header class="about-me">
           <nav>
-              <a href="index.html"><button style="margin-left: 1rem;">go waugh</button></a>
+              <a href="index.html"><button style="margin-left: 1rem; border-style: none;">G U L B A H A R</button></a>
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
@@ -46,24 +46,6 @@
       <main>
 
           <section class="about">
-              <!--div class="one-third" id="images">
-                  <img src="images/me.png" class="first">
-                  <img src="images/belle.png" class="second">
-                  <img src="images/babies.png" class="first">
-                  <img src="images/mommy.png" class="second">
-                  <img src="images/zebras.png" class="first">
-                  <img src="images/keynote.png" class="second">
-                  <img src="images/groupphoto.png" class="first">
-                  <img src="images/kosovo2.png" class="second">
-                  <img src="images/agguate.png" class="first">
-                  <img src="images/bangladesh.png" class="second">
-                  <img src="images/married.png" class="first">
-                  <img src="images/mada.png" class="second">
-                  <img src="images/sara3.png" class="first">
-                  <img src="images/cat.png" class="second">
-                  <img src="images/aydinstory.png" class="first">
-                  <img src="images/wahoo.png" class="second">
-              </div-->
                 <div class="intro-me">
                     <div id="only-width">
                         <img src="images/me.png">
@@ -122,7 +104,7 @@
                           grants and contracts for USG-funded programming in developing countries and designing and implementing
                           marketing strategies to raise company visibility. My experience was mainly with small companies - with
                           a maximum of 40 people and a 5-person business development team. I wore a lot of hats and got a lot of
-                          opportunities:
+                          opportunities.<!--:
                         <ul class="examples">
                             <li class="first" id="one">Acquired more than $80 million for programs in resource-poor areas:
                               affordable housing in Haiti and a fintech study in the Philippines</li>
@@ -133,7 +115,7 @@
                               to discuss the importance of technology</li>
                             <li class="second" id="four">Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
                             <div class="clearfix"></div>
-                        </ul>
+                        </ul>-->
                         <p>However, most rewarding and interesting, has been the user research during program design. I firmly
                           believed and was often shown that solutions lie within the communities that were facing the challenges.
                           I was only needed to kickstart their ideas or speed up activities with fundraising. I also learned that
