--- a/images.html
+++ b/images.html
@@ -39,6 +39,10 @@
             <img src="images/rfs-green-mezlan.png">
             <img src="images/rfs-site-map.png">
             <img src="images/rfs-user-flows.png">
+            <img src="images/rfs/data-mining.png">
+            <img src="images/rfs/rfs-site-flow.png">
+
+
 
           </section>
       </main>
