--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <h3>refated Shoes</h3>
+                                <h2>ReFated Shoes</h2>
                                 <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
                                   help taking his company to the next level.</p>
                           </div>
@@ -77,7 +77,7 @@
                           </a>
                           <div class="clearfix"></div>
                           <div class="text">
-                                <h3>COOP</h3>
+                                <h2>COOP</h2>
                                 <p>A platform that makes it easy to share, store, and collaborate
                                    needed help rebranding for a new audience.</p>
                           </div>
