updated case study header to align center and the image to be larger

--- a/rfs.html
+++ b/rfs.html
@@ -42,16 +42,16 @@
           </nav>
           <section class="hero">
                   <div class="header">
-                      <h1 style="text-align:left;">Making of a Brand</h1>
-                      <div class="first">
+                      <h1>Making of a Brand</h1>
+                      <div id="container">
                           <p>ReFated Shoes (RFS) sells “wearable art”, or shoes that have
                             been hand-painted into vibrant colors and patterns<p>
                           <p id="caption">branding   |   strategy   |   UX & UI</p>
                           <p>
                           <a href="https://projects.invisionapp.com/share/E5E270F8X#/screens"><button class="case-study-button">view prototype</button></a>
                       </div>
-                      <div class="second">
-                          <img src="images/rfs/rfs-header.png">
+                      <div>
+                          <img src="images/rfs/rfs-header.png" style="width:100%;">
                       </div>
                   </div>
               <div class="clearfix"></div>
